--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ctfo.parking">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".ParkingApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,6 +21,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".splash.NaviTabActivity"
+            android:label="@string/navi_tab_title">
+
         </activity>
 
     </application>
