--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,12 @@ dependencies {
 
 
     //3D地图so及jar
-    implementation 'com.amap.api:3dmap:latest.integration'
+//    implementation 'com.amap.api:3dmap:latest.integration'
     //定位功能
     implementation 'com.amap.api:location:latest.integration'
     //搜索功能
     implementation 'com.amap.api:search:latest.integration'
-    //导航功能
+    //导航功能 (已经包括3d地图)
     implementation 'com.amap.api:navi-3dmap:latest.integration'
 
 }
